# curriculum-notes

./: .gitignore  README.txt  Readme  实用类文本.fodt  文学类文本.fodt  诗歌鉴赏.fodt
Data-structure-and-algorithms-B/CarManagement/: .gitignore  CarManagement.cpp  车辆管理数据.txt
chinese-read-and-comprehension-accumulation/: 论述类文本.fodt
computational-physics-2010/: Cargo.toml  README.md
computational-physics-2010/note/: chapter01.md
computational-physics-2010/src/: main.rs
computational-physics-2010/src/chapter01/: chapter1a.rs  chapter1b.rs  chapter1c.rs  mod.rs
data-structure-and-algorithms-B/CarManagement/: .gitignore  CMakeLists.txt  CarManagement.cpp
data-structure-and-algorithms-B/CarManagement/include/: ArrayList.hpp  LinkedList.hpp  List.hpp  common.h  edit_car_info.hpp  edit_incident_info.hpp  io.hpp  statistics.hpp  structs.hpp  util.hpp
data-structure-and-algorithms-B/CarManagement/src/: CarManagement.cpp  edit_car_info.cpp  edit_incident_info.cpp  io.cpp  statistics.cpp  structs.cpp  util.cpp
introduction-to-coding-B/: 01-20201113-上机报告.md  02-20201127-上机报告.md
modern-physics-lecture/: 04-20201105-什么是质量-高原宁.md  05-20201112-引力波天文学与基础物理-邵立晶.md  06-20201119-大气物理与大气环境研究进展-林金泰.md  07-20201126-气候、海洋、行星气候与宜居性-胡永云.md  08-20201203-超高品质因子微腔光学与光子学-肖云峰.md  09-20201210-时空小尺度光学前沿技术.md  10-20201217-激光加速器与技术革命.md  11-20201224-带你走进神奇的原子核世界.md  12-20201231-Quantom-Computer-and-quantom-algorithms-吴飙.md  13-世间万物、和而不同——从凝聚态物理看万物之理-李新征.md
